# FlowState

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: CODEX_MCP_SETUP.md
examples/project-bootstrap/: README.md
examples/project-bootstrap/.flow/: codex-runtime.md  context.toml
examples/runtime-pack/objects/: deployment-standards.md  github-issues-resolution.md  planning-flow.md  prd-enforcement.md  product-direction.md  python-standards.md  review-flow.md
examples/runtime-pack/stacks/: ai-builder.yaml
src/flowstate_runtime/: __init__.py  auth.py  bootstrap.py  cli.py  client.py  codex.py  compose.py  drift.py  models.py  paths.py  server.py  store.py  validate.py
tests/: test_auth.py  test_cli.py  test_compose.py  test_server.py  test_store.py
