[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowstate-runtime"
version = "0.1.0"
description = "CLI-first operational runtime conditioning system for AI-assisted environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "FlowState" }
]
keywords = ["ai", "agents", "cli", "context", "local-first", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.23.0",
  "PyYAML>=6.0.1",
  "starlette>=0.37.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
flow = "flowstate_runtime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flowstate_runtime"]

[tool.hatch.build.targets.wheel.force-include]
"examples/runtime-pack" = "flowstate_runtime/example_pack"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
